--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,16 @@ environment:
 
 dependencies:
   http: ^0.13.1
+  font_awesome_flutter: ^9.0.0
+  google_fonts: ^2.0.0
+  
+  image_picker: ^0.7.4
+  fluttertoast: ^8.0.3
+  firebase_auth: ^1.0.2
+  firebase_storage: ^8.0.2
+  firebase_database: ^6.1.2
+  auto_size_text: ^2.1.0
+  
   flutter:
     sdk: flutter
 
